--- a/src/garlito-player.css
+++ b/src/garlito-player.css
@@ -1,4 +1,4 @@
-@import "../garlito-player/assets/css/bootstrap.min.css";
+@import "../assets/css/bootstrap.min.css";
 
 @media (min-width: 1px) and (max-width: 250px) {
     #muteButton{ display:  none!important; }
@@ -21,7 +21,7 @@
     .station-logo{ display:none!important;}
     .info-table{ display: inline-block!important; left:20px!important;}
     .buttons-holder{ width: 70px!important; right:20px!important;}
-     #album{  display: none!important;  }
+    #album{  display: none!important;  }
 }
 
 /*  Small devices (landscape phones, less than 768px) */
@@ -76,30 +76,30 @@
 #facebookIcon{
 
     background-color: white;
-    mask: url("../garlito-player/assets/img/social-media/facebook.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/social-media/facebook.svg") no-repeat center / contain;
+    mask: url("../assets/img/social-media/facebook.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/social-media/facebook.svg") no-repeat center / contain;
     cursor: pointer;
 }
 
 
 #instagramIcon{
     background-color: white;
-    mask: url("../garlito-player/assets/img/social-media/instagram.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/social-media/instagram.svg") no-repeat center / contain;
+    mask: url("../assets/img/social-media/instagram.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/social-media/instagram.svg") no-repeat center / contain;
     cursor: pointer;
 }
 
 #historyIcon{
     background-color: white;
-    mask: url("../garlito-player/assets/img/history.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/history.svg") no-repeat center / contain;
+    mask: url("../assets/img/history.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/history.svg") no-repeat center / contain;
     cursor: pointer;
 }
 
 #chatIcon{
     background-color: white;
-    mask: url("../garlito-player/assets/img/chat.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/chat.svg") no-repeat center / contain;
+    mask: url("../assets/img/chat.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/chat.svg") no-repeat center / contain;
     cursor: pointer;
 }
 
@@ -178,13 +178,13 @@ body{
 }
 
 .admin-white-box{
-	background: white;
+    background: white;
     border-radius: 15px;
     padding: 20px;
 }
 
 .buttons-holder{
-     width: 250px;
+    width: 250px;
     height: 80px;
     position: absolute;
     text-align: center;
@@ -196,9 +196,9 @@ body{
 }
 
 .player-holder{
-	-webkit-box-shadow: 0px -8px 24px -6px rgb(0 0 0 / 47%);
+    -webkit-box-shadow: 0px -8px 24px -6px rgb(0 0 0 / 47%);
     box-shadow: 0px -8px 24px -6px rgb(0 0 0 / 16%);
-	z-index:10000000!important;
+    z-index:10000000!important;
     width: 100%;
     height: 120px;
     position: fixed;
@@ -210,7 +210,7 @@ body{
 
 .player{
     padding: 20px;
-       height: 120px;
+    height: 120px;
 }
 .button{
     width:50px;
@@ -227,15 +227,15 @@ body{
 #playButton{
     display: inline-block;
     background-color: black;
-    mask: url("../garlito-player/assets/img/play-button.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/play-button.svg") no-repeat center / contain;
+    mask: url("../assets/img/play-button.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/play-button.svg") no-repeat center / contain;
 }
 
 #stopButton{
     display: none;
     background-color: black;
-    mask: url("../garlito-player/assets/img/stop.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/stop.svg") no-repeat center / contain;
+    mask: url("../assets/img/stop.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/stop.svg") no-repeat center / contain;
 }
 
 #muteButton{
@@ -246,8 +246,8 @@ body{
     width: 20px;
     height: 20px;
     background-color: black;
-    mask: url("../garlito-player/assets/img/speaker.svg") no-repeat center / contain;
-    -webkit-mask: url("../garlito-player/assets/img/speaker.svg") no-repeat center / contain;
+    mask: url("../assets/img/speaker.svg") no-repeat center / contain;
+    -webkit-mask: url("../assets/img/speaker.svg") no-repeat center / contain;
 }
 #volumeSlider{
     display: none;
@@ -362,95 +362,95 @@ input[type=range]:focus::-ms-fill-upper {
 
 
 .wave2 {
-	background-color: black;
-    mask: url("../garlito-player/assets/img/wave_gray.svg") 0 0 repeat-x;
-    -webkit-mask: url("../garlito-player/assets/img/wave_gray.svg") 0 0 repeat-x;
+    background-color: black;
+    mask: url("../assets/img/wave_gray.svg") 0 0 repeat-x;
+    -webkit-mask: url("../assets/img/wave_gray.svg") 0 0 repeat-x;
 }
 
 input[type=range] {
-          -webkit-appearance: none;
-          margin: 10px 0;
-          width: 100%;
-        }
-        input[type=range]:focus {
-          outline: none;
-        }
-        input[type=range]::-webkit-slider-runnable-track {
-          width: 100%;
-          height: 10px;
-          cursor: pointer;
-          animate: 0.2s;
-          box-shadow: 0px 0px 0px #000000;
-          background: #dddddd;
-          border-radius: 50px;
-          border: 0px solid #ffffff;
-        }
-        input[type=range]::-webkit-slider-thumb {
-          box-shadow: 0px 0px 1px #ffffff;
-          border: 1px solid #a5a5a5;
-          height: 17px;
-          width: 17px;
-          border-radius: 17px;
-          background: #FFFFFF;
-          cursor: pointer;
-          -webkit-appearance: none;
-          margin-top: -4px;
-        }
-        input[type=range]:focus::-webkit-slider-runnable-track {
-          background: #dddddd;
-        }
-        input[type=range]::-moz-range-track {
-          width: 100%;
-          height: 10px;
-          cursor: pointer;
-          animate: 0.2s;
-          box-shadow: 0px 0px 0px #000000;
-          background: #dddddd;
-          border-radius: 50px;
-          border: 0px solid #ffffff;
-        }
-        input[type=range]::-moz-range-thumb {
-          box-shadow: 0px 0px 1px #ffffff;
-          border: 1px solid #a5a5a5;
-          height: 17px;
-          width: 17px;
-          border-radius: 17px;
-          background: #FFFFFF;
-          cursor: pointer;
-        }
-        input[type=range]::-ms-track {
-          width: 100%;
-          height: 10px;
-          cursor: pointer;
-          animate: 0.2s;
-          background: transparent;
-          border-color: transparent;
-          color: transparent;
-        }
-        input[type=range]::-ms-fill-lower {
-          background: #dddddd;
-          border: 0px solid #ffffff;
-          border-radius: 100px;
-          box-shadow: 0px 0px 0px #000000;
-        }
-        input[type=range]::-ms-fill-upper {
-          background: #dddddd;
-          border: 0px solid #ffffff;
-          border-radius: 100px;
-          box-shadow: 0px 0px 0px #000000;
-        }
-        input[type=range]::-ms-thumb {
-          box-shadow: 0px 0px 1px #ffffff;
-          border: 1px solid #a5a5a5;
-          height: 17px;
-          width: 17px;
-          border-radius: 17px;
-          background: #FFFFFF;
-          cursor: pointer;
-        }
-        input[type=range]:focus::-ms-fill-lower {
-          background: #dddddd;
-        }
-        input[type=range]:focus::-ms-fill-upper {
-          background: #dddddd;
-        }
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #dddddd;
+    border-radius: 50px;
+    border: 0px solid #ffffff;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 1px #ffffff;
+    border: 1px solid #a5a5a5;
+    height: 17px;
+    width: 17px;
+    border-radius: 17px;
+    background: #FFFFFF;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -4px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #dddddd;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #dddddd;
+    border-radius: 50px;
+    border: 0px solid #ffffff;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 1px #ffffff;
+    border: 1px solid #a5a5a5;
+    height: 17px;
+    width: 17px;
+    border-radius: 17px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 10px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #dddddd;
+    border: 0px solid #ffffff;
+    border-radius: 100px;
+    box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+    background: #dddddd;
+    border: 0px solid #ffffff;
+    border-radius: 100px;
+    box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-thumb {
+    box-shadow: 0px 0px 1px #ffffff;
+    border: 1px solid #a5a5a5;
+    height: 17px;
+    width: 17px;
+    border-radius: 17px;
+    background: #FFFFFF;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #dddddd;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #dddddd;
+}
